# code-classification

./: .gitignore  README.md  config.json  main.py  requirements.txt  run.sh
notebooks/: baseline_sandbox.ipynb  doc2vec.ipynb  explore_folders.ipynb  finetune_codeparrot.ipynb  finetune_rust.ipynb  prepare_tokenizer.ipynb  simple_word_embeddings.ipynb  word2vec.ipynb
parser/: Cargo.toml  model.json
parser/src/: main.rs
scripts/: measure_baseline_accuracy.py
src/: Prepare_data.ipynb  baseline.ipynb  dataloader.py  main.py  params.py  test.ipynb  utils.py
src/baseline/: dataloader.py  trainer.py
src/codeparrot/: dataloader.py  trainer.py
src/word2vec/: dataloader.py  trainer.py
