[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
fxhash = "0.2"
liblinear = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-xid = "0.2"
walkdir = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
